# lyrics-widget

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
