[package]
name = "my-lyrics-widget"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "my_lyrics_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.52.1"

# Windows: System Media Transport Controls
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Media_Control", "Foundation"] }

# Linux: MPRIS via D-Bus
[target.'cfg(target_os = "linux")'.dependencies]
nowhear = "0.2.0"

# macOS: Apple MediaRemote Control Center
[target.'cfg(target_os = "macos")'.dependencies]
mediaremote-rs = "0.1.5"
